# lazypass

./: BUILD_ANDROID.md  package.json  pnpm-lock.yaml  vite.config.js
scripts/: build-android.sh  build-lazypass.sh  build.sh  install-android.sh  sign-apk.sh
src/: app.css
src-tauri/: Cargo.toml  build.rs  cryptomator.keystore  release.keystore  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: AppHeader.svelte  AuthCard.svelte  GenerateButton.svelte  PasswordInput.svelte  ProcessingOverlay.svelte  ResetButton.svelte  ResultArea.svelte
src/routes/: +page.svelte
